<resources>
    <string name="app_name">NewsReader</string>
    <string name="title_news">News</string>
    <string name="title_reporters">Reporters</string>
    <string name="title_coverdrop">Send a Tip</string>

    <string name="pull_to_refresh">Pull to refresh</string>
    <string name="written_by_template">Written by %1$s</string>
    <string name="journalist_description_template">%1$s is one of our award winning investigative journalists.</string>

    <string name="dummy_text_news_title">Dummy text news title</string>
    <string name="dummy_text_author">WILLIAM ONE</string>
    <string name="dummy_text_lorem_ipsum">Dummy text lorem ipsum solor sit et daum. Hic salor et iclor paran unus retrorar. Dummy text lorem ipsum solor sit et daum. Hic salor et iclor paran unus retrorar.\n\nDummy text lorem ipsum solor sit et daum. Hic salor et iclor paran unus retrorar.</string>
    <string name="dummy_text_journalist_description">William One is one of our award winning investigative journalists.</string>
    <string name="button_write_mail">Write E-Mail</string>
    <string name="button_send_confidential_tip">Send a tip</string>
    <string name="toast_email_not_implemented">E-Mail button is not implemented</string>
    <string name="toast_send_tip_not_implemented">Send tip button is not implemented</string>
    <string name="text_coverdrop_already_sent_something_title">Already sent something?</string>
    <string name="text_coverdrop_already_sent_something_content">Check for responses here. Use the same passphrase you were given when you sent your messages.</string>
    <string name="button_check_for_messages">Check for messages</string>
    <string name="text_coverdrop_send_for_the_first_time_title">Send for the first time</string>
    <string name="text_coverdrop_send_for_the_first_time_content">Please either write the following passphrase down and keep it in a safe place, or memorize it.</string>
    <string name="dummy_passphrase">oxygen timeless recoup</string>
    <string name="button_send_a_tip">Send a tip</string>
    <string name="text_coverdrop_click_here_to_learn_more">Click here to learn more about CoverDrop and how we protect your identity.</string>
    <string name="generating_passphrase">generating passphrase…</string>
    <string name="alert_unusual_passphrase_message">The provided passphrase does not match the words from the generator.\n\nThere might be a typo and you risk erasing existing state (if any).\n\nDo you wish to continue?</string>
    <string name="alert_unusual_passphrase_title">Check passphrase</string>
    <string name="alert_unusual_passphrase_button_continue">Continue</string>
    <string name="alert_unusual_passphrase_button_cancel">Cancel</string>
    <string name="title_coverdrop_splash">Coverdrop Splash</string>
    <string name="text_coverdrop_active_chats">Active Chats</string>
    <string name="text_coverdrop_available_contacts">All Contacts</string>
    <string name="text_template_coverdrop_next_send_at">Next message update at %1$s</string>
    <string name="text_coverdrop_active_chats_empty">You do not have any active chats at the moment. Use the list below to initiate a new chat.</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="test_coverdrop_splash_loading_main">Loading CoverDrop Session…</string>
    <string name="test_coverdrop_splash_loading_footer">This will take a couple of seconds regardless of whether there was any existing session beforehand.</string>
    <string name="text_coverdrop_contacts_empty">There are now contacts available. Make sure you have Internet connection and restart the app.</string>
    <string name="dummy_text_pub_key">AA:BB:CC:DD:EE:FF</string>
</resources>
