<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.coverdrop.CoverdropFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp">

        <com.google.android.material.card.MaterialCardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cardBackgroundColor="@color/cardBackground"
            app:cardElevation="2dp"
            app:cardUseCompatPadding="true">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="16dp">

                <TextView
                    style="@style/TextAppearance.AppCompat.Medium"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="4dp"
                    android:text="@string/text_coverdrop_already_sent_something_title"
                    android:textColor="@color/colorPrimary" />

                <TextView
                    style="@style/TextAppearance.AppCompat.Small"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="8dp"
                    android:text="@string/text_coverdrop_already_sent_something_content" />

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:endIconMode="password_toggle"
                    app:hintEnabled="false"
                    app:startIconDrawable="@drawable/ic_coverdrop_black_24dp">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/edit_text_user_passphrase"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="monospace"
                        android:inputType="textPassword"
                        android:paddingTop="8dp"
                        android:paddingBottom="8dp" />
                </com.google.android.material.textfield.TextInputLayout>

                <Button
                    android:id="@+id/button_check_for_messages"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/button_check_for_messages" />
            </LinearLayout>

        </com.google.android.material.card.MaterialCardView>

        <com.google.android.material.card.MaterialCardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            app:cardBackgroundColor="@color/cardBackground"
            app:cardElevation="2dp"
            app:cardUseCompatPadding="true">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="16dp">

                <TextView
                    style="@style/TextAppearance.AppCompat.Medium"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="4dp"
                    android:text="@string/text_coverdrop_send_for_the_first_time_title"
                    android:textColor="@color/colorPrimary" />

                <TextView
                    style="@style/TextAppearance.AppCompat.Small"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="8dp"
                    android:text="@string/text_coverdrop_send_for_the_first_time_content" />

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:hintEnabled="false"
                    app:startIconDrawable="@drawable/ic_coverdrop_black_24dp">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/edit_text_generated_passphrase"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:enabled="false"
                        android:fontFamily="monospace"
                        android:inputType="textVisiblePassword"
                        android:paddingTop="8dp"
                        android:paddingBottom="8dp"
                        android:text="@string/generating_passphrase"
                        android:textColor="@android:color/primary_text_light" />
                </com.google.android.material.textfield.TextInputLayout>

                <Button
                    android:id="@+id/button_send_tip"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/button_send_a_tip" />
            </LinearLayout>

        </com.google.android.material.card.MaterialCardView>


        <TextView
            style="@style/TextAppearance.AppCompat.Small"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:alpha="0.75"
            android:text="@string/text_coverdrop_click_here_to_learn_more" />

    </LinearLayout>
</ScrollView>
